# Solar_sistem_apredizaje

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: Init_Glfw.h  Objeto.h
include/glad/: glad.c  glad.h
readfiles/: BITACORA.md  lerningPath.md
src/: Init_Glfw.cpp  Objeto.cpp
src/shader/: Shader.h
